--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "utt-balance"
 version = "0.1.0"
 description = "A UTT plugin to check worked time balance against daily/weekly targets"
 readme = "README.md"
-license = {text = "MIT"}
+license = "GPL-3.0-only"
 requires-python = ">=3.10"
 authors = [
     {name = "Logan Thomas", email = "logan@datacentriq.net"},
@@ -17,7 +17,6 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Intended Audience :: End Users/Desktop",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
@@ -37,9 +36,16 @@ Homepage = "https://github.com/loganthomas/utt-balance"
 Repository = "https://github.com/loganthomas/utt-balance"
 Issues = "https://github.com/loganthomas/utt-balance/issues"
 
-[tool.setuptools]
-package-dir = {"" = "src"}
-packages = ["utt.plugins", "utt_balance"]
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
+]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["utt.*", "utt_balance"]
+namespaces = true
 
 [tool.setuptools.package-data]
 "*" = ["py.typed"]
@@ -57,3 +63,7 @@ python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
