--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,9 @@ Issues = "https://github.com/loganthomas/utt-balance/issues"
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "ruff>=0.4",
+    "ty>=0.0.1a1",
+    "pre-commit>=3.0",
 ]
 
 [tool.setuptools.packages.find]
@@ -50,18 +53,16 @@ namespaces = true
 [tool.setuptools.package-data]
 "*" = ["py.typed"]
 
-[tool.black]
+[tool.ruff]
 line-length = 100
-target-version = ["py310", "py311", "py312", "py313"]
+target-version = "py310"
 
-[tool.isort]
-profile = "black"
-line_length = 100
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
+ignore = []
 
-[tool.mypy]
-python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
+[tool.ruff.lint.isort]
+known-first-party = ["utt_balance"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
