fix: move plugin to utt_balance package to avoid namespace conflicts
- Move balance.py from utt.plugins to utt_balance package
- Update entry point to utt_balance.balance
- Fix test imports
- Resolves plugin discovery issue where utt couldn't find the balance command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ Repository = "https://github.com/loganthomas/utt-balance"
 Issues = "https://github.com/loganthomas/utt-balance/issues"
 
 [project.entry-points."utt.plugins"]
-balance = "utt.plugins.balance"
+balance = "utt_balance.balance"
 
 [project.optional-dependencies]
 dev = [
@@ -49,7 +49,7 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/utt", "src/utt_balance"]
+packages = ["src/utt_balance"]
 
 [tool.ruff]
 line-length = 100
