testing install from pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,6 @@ Homepage = "https://github.com/loganthomas/utt-balance"
 Repository = "https://github.com/loganthomas/utt-balance"
 Issues = "https://github.com/loganthomas/utt-balance/issues"
 
-[project.entry-points."utt.plugins"]
-balance = "utt_balance.balance"
-
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
@@ -49,7 +46,7 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/utt_balance"]
+packages = ["src/utt", "src/utt_balance"]
 
 [tool.ruff]
 line-length = 100
