--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,13 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/utt", "src/utt_balance"]
+packages = ["src/utt_balance"]
+
+[tool.hatch.build.targets.wheel.force-include]
+"src/utt/plugins/balance.py" = "utt/plugins/balance.py"
+
+[tool.hatch.build.targets.editable]
+dev-mode-dirs = ["src"]
 
 [tool.ruff]
 line-length = 100
