refactor(balance): use pairwise and datetime.combine for cleaner code

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Run tests
         run: pytest
 
-      - name: Complete messsge
+      - name: Complete message
         run: echo "unit tests completed"
