--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "utt-balance"
-version = "0.1.0-rc.2"
-description = "A UTT plugin to check worked time balance against daily/weekly targets"
+version = "0.1.0-rc.3"
+description = "A utt plugin to check worked time balance against daily/weekly targets"
 readme = "README.md"
 license = "GPL-3.0-only"
 requires-python = ">=3.10"
